[gd_scene load_steps=3 format=3 uid="uid://b0lb3pfxjdgay"]

[ext_resource type="Script" path="res://scripts/Difficulties.gd" id="1_jlb3f"]
[ext_resource type="Texture2D" uid="uid://c6qv54vi3nbm1" path="res://assets/field.tres" id="2_2b1gq"]

[node name="Settings" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_jlb3f")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 1200.0
offset_bottom = 800.0
texture = ExtResource("2_2b1gq")

[node name="RichTextLabel" type="RichTextLabel" parent="TextureRect"]
custom_minimum_size = Vector2(1200, 100)
layout_mode = 0
offset_right = 1200.0
offset_bottom = 144.0
theme_override_font_sizes/normal_font_size = 90
bbcode_enabled = true
text = "[center]Difficulty Settings[/center]"

[node name="PlayButton" type="Button" parent="TextureRect"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 500.0
offset_top = -100.0
offset_right = 700.0
offset_bottom = -35.0
grow_vertical = 0
theme_override_font_sizes/font_size = 40
text = "Play"

[node name="VBoxContainer" type="VBoxContainer" parent="TextureRect"]
layout_mode = 0
offset_left = 100.0
offset_top = 150.0
offset_right = 1100.0
offset_bottom = 400.0

[node name="Difficulty" type="RichTextLabel" parent="TextureRect/VBoxContainer"]
custom_minimum_size = Vector2(250, 80)
layout_mode = 2
size_flags_horizontal = 0
theme_override_font_sizes/normal_font_size = 50
bbcode_enabled = true
text = "[center]Difficulty[/center]"

[node name="DifficultyButton" type="OptionButton" parent="TextureRect/VBoxContainer"]
custom_minimum_size = Vector2(250, 0)
layout_mode = 2
size_flags_horizontal = 0
theme_override_font_sizes/font_size = 40
item_count = 4
popup/item_0/text = "Easy"
popup/item_1/text = "Medium"
popup/item_1/id = 1
popup/item_2/text = "Hard"
popup/item_2/id = 2
popup/item_3/text = "Hardcore"
popup/item_3/id = 3

[node name="DifficultyDesc" type="RichTextLabel" parent="TextureRect/VBoxContainer"]
custom_minimum_size = Vector2(80, 80)
layout_mode = 2
theme_override_font_sizes/normal_font_size = 25

[node name="VBoxContainer2" type="VBoxContainer" parent="TextureRect"]
layout_mode = 2
offset_left = 100.0
offset_top = 400.0
offset_right = 1100.0
offset_bottom = 650.0

[node name="Mode" type="RichTextLabel" parent="TextureRect/VBoxContainer2"]
custom_minimum_size = Vector2(250, 80)
layout_mode = 2
size_flags_horizontal = 0
theme_override_font_sizes/normal_font_size = 50
bbcode_enabled = true
text = "[center]Mode[/center]"

[node name="ModeButton" type="OptionButton" parent="TextureRect/VBoxContainer2"]
custom_minimum_size = Vector2(250, 80)
layout_mode = 2
size_flags_horizontal = 0
theme_override_font_sizes/font_size = 40
item_count = 3
popup/item_0/text = "Arcade"
popup/item_1/text = "Normal"
popup/item_1/id = 1
popup/item_2/text = "MaxStroke"
popup/item_2/id = 2

[node name="ModeDesc" type="RichTextLabel" parent="TextureRect/VBoxContainer2"]
custom_minimum_size = Vector2(0, 80)
layout_mode = 2
theme_override_font_sizes/normal_font_size = 25

[connection signal="pressed" from="TextureRect/PlayButton" to="." method="_on_play_button_pressed"]
[connection signal="item_selected" from="TextureRect/VBoxContainer/DifficultyButton" to="." method="_on_difficulty_button_item_selected"]
[connection signal="item_selected" from="TextureRect/VBoxContainer2/ModeButton" to="." method="_on_mode_button_item_selected"]
